more alignment fixes per eugs suggestions

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -52,6 +52,7 @@
 
 .navbar-brand { /* CSS for Wearhaus logo */
     padding: 5px 15px;
+    margin-left: 0 !important;
 }
 
 #mailingListModal .modal-body {
@@ -126,7 +127,7 @@
     text-decoration: none;
     background-color: #EDEDED;
     padding-top:5px;
-    padding-left: 15px;
+    padding-left: 5%;
     color: black;
     clear:both;
     z-index: 99;
@@ -148,6 +149,14 @@
     clear:both;
 }
 
+.navbar-collapse {
+    padding-left: 0;
+}
+
+.container {
+    width: 92%;
+}
+
 #img-container img {
    width: 100%;
 }
@@ -163,35 +172,6 @@
     margin-top: -5px;
 }
 
-.blognav2 {
-    margin-left: 30px;
-}
-
-#blognav_container {
-    margin-right: 0px;
-    margin-left: 15px;
-    padding-left: 0px;
-    padding-right: 0px;
-}
 .collapse-blog>li>a{
     color:black !important;
-}
-
-
-@media(min-width:1025px) {
-    .container {
-        width: 70%;
-    }
-}
-
-@media (max-width: 992px) {
-    .container {
-        width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
-    .container {
-        width: 100%;
-    }
 }
